# data_chord

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BEADS_QUICKREF.md  CLAUDE.md  CONSIDERED_OPTIONS.md  DATAHUB_INTEGRATION_PLAN.md  Dockerfile  Justfile  PASSTHROUGH_FILTER_PLAN.md  README.md  RELEASING.md  SHEET_PREVIEW_POPOVER_PLAN.md  SIMPLIFICATION_LOG.md  TECH_STACK_OPTIONS.md  URL_STATE_INVESTIGATION.md  USE_CASES_AND_CHALLENGES.md  WORKFLOW_STATE_SIMPLIFICATION_PLAN.md  app.md  cde_recommendation_endpoint.md  conductor.json  decision_history.md  main.py  package-lock.json  package.json  playwright.config.mjs  playwright.requirements.config.mjs  proposal.md  pyproject.toml  requirements.md  startup.sh  styles.md  todo.md  tsconfig.json  workflow.md
.claude/commands/: browser.md
.github/workflows/: ci.yml  claude.yml
adr/: ADR_001_transformation_history.md  ADR_002_row_context_popup.md  ADR_003_pv_manifest_persistence.md  ADR_004_cde_lambda_migration.md  ADR_004_pv_override_protection.md  ADR_005_cde_lambda_migration.md  ADR_006_env_simplification.md  ADR_007_ai_whitespace_trimming.md  ADR_008_release_strategy.md  ADR_009_tabular_column_identity.md  ADR_009_unified_column_assignment_model.md
adr/archive/: SIMPLIFICATION_LOG.md
backend/app/: __init__.py  error_handlers.py  main.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  styles.css
infra/: .terraform.lock.hcl  DEPLOYMENT_TALLY.md  README.md  buildspec.yml  main.tf  outputs.tf  variables.tf  versions.tf
infra/env/: common.tfvars  prod.backend.hcl  prod.tfvars  staging.backend.hcl  staging.tfvars
infra/scripts/: bootstrap-cognito-client.sh  bootstrap-secrets.sh  bootstrap-state.sh  deploy.sh  invite-cognito-user.sh  lib.sh
infra/templates/: cognito-invite-email.html.tftpl
infra/tests/: deployment-config-test.sh
mocks/stage-2/: generate.py  index.html  takeover.html
mockups/: README.md  index.html  mockup_feedback.md  mockup_server.py  multi-column-harmonization.html  step4-review-workflow.html
prototypes/: build-decision-shape.mjs  decision-shape-stage2.html  filter-button-styles-v1-variations.html  filter-button-styles.html  harmonize-animation.html  passthrough-filter-controls.html  passthrough-icon-variations.html  stage2_cde_catalog.json  stage2_live_payload.json
prototypes/stage_2_guided/: 01_concierge.html  02_walkthrough.html  03_value_first.html  index.html
scripts/: check-cross-stage-imports.sh  check_requirements_traceability.py  check_test_only_code.py
src/: __init__.py  global.d.ts  paths.py  settings.py
src/api/: __init__.py  schemas.py
src/app/: __init__.py  data_model_store.py  dependencies.py  session_cache.py
src/auth/: __init__.py  user_context.py
src/domain/: __init__.py  cde.py  cde_catalog.py  cde_mapping_persistence.py  cde_pv_catalog.py  cde_type_classification.py  cde_type_overrides.py  change.py  column_assignment.py  column_cde_map.py  column_profile.py  column_renames.py  columns.py  config.py  data_model_adapter.py  data_model_cache.py  data_model_client.py  data_model_selection.py  data_model_version_reference.py  dataset_workflow_ids.py  demo_bypass.py  dependencies.py  file_ids.py  harmonize.py  mapping_service.py  match_counts.py  observability.py  paths.py  pv_manifest.py  pv_persistence.py  pv_validation.py  review_override_store.py  review_overrides.py  schemas.py  session.py  tabular_column_renames.py  user_context.py  workflow_artifact_store.py  workflow_state.py  workflow_state_store.py
src/integrations/: data_model_store.py  netrias_harmonize.py  netrias_mapping.py
src/observability/: __init__.py  events.py  router.py  schemas.py
src/persistence/: __init__.py  cde_mapping_document_store.py  manifest_writer.py  pv_manifest_store.py  review_override_store.py  workflow_artifacts.py  workflow_state_store.py
src/shared/: __init__.py
src/stage_1_upload/: __init__.py  dependencies.py  harmonize.py  manifest_reader.py  mapping_service.py  (+3 more)
tests/: cache_helpers.py  conftest.py  test_analyze_flow.py  test_analyze_includes_profiles.py  test_apply_column_mappings.py  test_cde_classification.py  test_cde_mapping_persistence.py  test_column_assignment_identity.py  test_column_profile.py  test_contracts.py  test_data_model_adapter.py  test_data_model_cache.py  test_data_model_version_reference.py  test_dataset_workflow_ids.py  test_demo_bypass.py  test_dependencies.py  test_error_boundaries.py  test_full_flow_features.py  test_harmonize_flow.py  test_journeys.py  test_manifest_parquet.py  test_mapping_discovery.py  test_match_counts.py  test_nonconformant_count.py  test_normalize_manifest.py  test_observability.py  test_overrides_behavior.py  test_properties.py  test_pv_column_identity.py  test_pv_integration.py  test_pv_manifest_persistence.py  test_pv_override.py  test_reader_whitespace.py  test_recommendation_type.py  test_review_rows_flow.py  test_s3_workflow_storage.py  test_sheet_preview_upload.py  test_stage3_nonconformant_stats.py  test_stage5_duplicate_headers.py  test_stage_2_column_detail.py  (+8 more)
(+170 files in other folders)
