[project]
name = "data-chord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "netrias-client==0.0.8",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.17.0",
    "ruff>=0.6.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
