[project]
name = "data-chord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "netrias-client==0.0.8",
    "python-dotenv",
    "pyarrow>=15.0.0",
    # transitive dep pins for security (CVE remediation)
    "starlette>=0.49.1",  # CVE-2025-62727 (via fastapi)
    "urllib3>=2.6.0",     # CVE-2025-66418, CVE-2025-66471 (via requests/boto3)
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.17.0",
    "ruff>=0.6.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.8",
    "pytest-playwright>=0.6.2",
    # transitive dep pin for security (CVE remediation)
    "filelock>=3.20.1",  # CVE-2025-68146 (via virtualenv/pre-commit)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
# Exclude E2E tests by default - they require Playwright browsers and run separately in CI
addopts = "--ignore=tests/e2e"
markers = [
    "e2e: end-to-end browser tests requiring Playwright",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # skip assert warnings (used in tests)
