[project]
name = "data-chord"
version = "0.1.0"
description = "Data harmonization workflow — upload tabular data, review AI-suggested mappings, and export standardized results"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.4,<0.136.0",  # allows Starlette security fix line
    "jinja2>=3.1.4",
    "python-multipart>=0.0.26",  # CVE remediation
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.40.69",
    "cryptography>=47.0.0",
    "netrias_client @ git+https://github.com/netrias/netrias_client.git@3cde0cd7e0b97c93b7645c22ad031b479d6bed3a",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "pyarrow>=23.0.1,<24",  # PYSEC-2026-113
    # transitive dep pins for security (CVE remediation)
    "starlette>=1.0.1,<1.1.0",  # PYSEC-2026-161 (via fastapi); recent security exception
    "pygments>=2.20.0",   # CVE-2026-4539 (via rich/pytest)
    "requests>=2.33.0",   # CVE-2026-25645 (via boto3)
    "urllib3>=2.6.0",     # CVE-2025-66418, CVE-2025-66471 (via requests/boto3)
    "idna>=3.15",         # CVE-2026-45409 (via requests/httpx)
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.17.0",
    "ruff>=0.6.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pip>=26.1.2",  # CVE remediation for the audited virtualenv pip package
    "pre-commit>=3.8",
    "pytest-playwright>=0.6.2",
    # transitive dep pin for security (CVE remediation)
    "filelock>=3.20.1",  # CVE-2025-68146 (via virtualenv/pre-commit)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
# Exclude E2E tests by default - they require Playwright browsers and run separately in CI
addopts = "--ignore=tests/e2e"
markers = [
    "e2e: end-to-end browser tests requiring Playwright",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["mocks"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "C901",   # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # skip assert warnings (used in tests)

[tool.uv]
# Security: require Python packages to be at least 7 days old before resolution.
# This is an important supply-chain protection against newly published compromised packages.
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
